fixing BotCommand.parseArguments for subclasses